--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ post_id_LOUYT-of-all
 post_id_spacelad101
 post_id_tecnoman
 post_id_pcmasterrace
+Subreddit Interaction/post_id_funny
+Subreddit Interaction/default_subreddits
