TIFU archiver added
New script that will optionally run every minutes checking for new 'hot'
TIFU posts and if a new one if found copying the content and putting it
the 'tifu_archived_posts' folder in .txt files named by the post title

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,9 @@ post_id_tecnoman
 post_id_pcmasterrace
 Subreddit Interaction/post_id_funny
 Subreddit Interaction/default_subreddits
+Subreddit Interaction/post_id_battlestations
+Subreddit Interaction/post_id_datahoarder
+Subreddit Interaction/post_id_cableporn
+Subreddit Interaction/post_id_dataisbeautiful
+Subreddit Interaction/post_id_tifu_arch
+*.txt
