--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ Subreddit Interaction/post_id_cableporn
 Subreddit Interaction/post_id_dataisbeautiful
 Subreddit Interaction/post_id_tifu_arch
 *.txt
+albums
+bad_links
+post_id_archive
+saved/
