--- a/.gitignore
+++ b/.gitignore
@@ -52,19 +52,16 @@ post_id_LOUYT-of-all
 post_id_spacelad101
 post_id_tecnoman
 post_id_pcmasterrace
-Subreddit Interaction/post_id_funny
+Subreddit Interaction/post_id_*
 Subreddit Interaction/default_subreddits
-Subreddit Interaction/post_id_battlestations
-Subreddit Interaction/post_id_datahoarder
-Subreddit Interaction/post_id_cableporn
-Subreddit Interaction/post_id_dataisbeautiful
-Subreddit Interaction/post_id_tifu_arch
 *.txt
+
+## Wallpaper Scraper Script ignore files
 albums
 bad_links
 post_id_archive
 saved/
-
+ws_log
 
 ## gedit save files
 *~
